[package]
name = "MatrixGenerator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "MatrixGenerator"
crate-type = ["cdylib"]

[dependencies]
ndarray = "0.16.1"
numpy = "0.24.0"
rand = "0.9.0"
rayon = "1.10.0"
rust-numpy = "0.1.0"

[dependencies.pyo3]
version = "0.24"
features = ["extension-module"]
